# TelegramChannelAI

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  channel_ai.py  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: README.md  config_crypto_channel.py  config_news_channel.py  config_tech_channel.py
tests/: test_config.py  test_dedup.py
web/: app.py  config.py  db.py
web/static/: app.js
web/templates/: 404.html  analytics.html  base.html  dashboard.html  published.html  queue.html  settings.html  sources.html
